# datalogistik

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  repo.json  requirements-dev.txt  requirements.txt  setup.py  testrepo.json
.github/workflows/: actions.yml
ci/: check_copyright.py  check_tpc_generation.py
datalogistik/: Dataset.py  __init__.py  _version.py  cli.py  config.py  datalogistik.py  dataset.py  dataset_search.py  generate_dataset.py  log.py  repo.py  table.py  tpc_builders.py  tpc_info.py  tpc_validation.py  util.py
ref_data/tpc-ds/: call_center.vld  catalog_page.vld  catalog_returns.vld  catalog_sales.vld  customer.vld  customer_address.vld  customer_demographics.vld  date_dim.vld  household_demographics.vld  income_band.vld  inventory.vld  item.vld  promotion.vld  reason.vld  ship_mode.vld  store.vld  store_returns.vld  store_sales.vld  time_dim.vld  warehouse.vld  web_page.vld  web_returns.vld  web_sales.vld  web_site.vld
tests/: test_Dataset.py  test_datalogistik.py  test_dataset.py  test_repo.py  test_tpc.py  test_util.py
tests/fixtures/.datalogistik_cache/chi_traffic_sample/a1fa1fa/: datalogistik_metadata.ini
tests/fixtures/.datalogistik_cache/fanniemae_sample/a77e575/: datalogistik_metadata.ini
tests/fixtures/.datalogistik_cache/taxi_2013/face7ed/: datalogistik_metadata.ini
tests/fixtures/datalogistik_cache/chi_traffic_sample/babb1e5/: datalogistik_metadata.ini
tests/fixtures/datalogistik_cache/nyctaxi_sample/ba11a57/: datalogistik_metadata.ini
tests/fixtures/test_cache/chi_taxi/dabb1e5/: datalogistik_metadata.ini
tests/fixtures/test_cache/chi_traffic_sample/a1fa1fa/: datalogistik_metadata.ini
tests/fixtures/test_cache/chi_traffic_sample/babb1e5/: datalogistik_metadata.ini
(+6 files in other folders)
