[tool.poetry]
name = "datalogistik"
version = "0.1.0"
description = ""
authors = ["Joost Hoozemans <joost@voltrondata.com>", "Austin Dickey <austin@voltrondata.com>"]
include = ["repo.json"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^7.0.0"
structlog = "^21.5.0"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
datalogistik = "datalogistik.datalogistik:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
