# Copyright (c) 2022, Voltron Data.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "datalogistik"
version = "0.1.0"
description = ""
authors = ["Joost Hoozemans <joost@voltrondata.com>", "Austin Dickey <austin@voltrondata.com>"]
include = ["repo.json"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^9.0.0"
urllib3 = "^1.26.9"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
black = "22.6.0"
flake8 = "4.0.1"
isort = "5.10.1"
pre-commit = "^2.20.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
datalogistik = "datalogistik.datalogistik:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
